# eleventh-hour

./: .gitmodules  README.md  pyproject.toml
conf/: clean_gps-iridium_hqtcxo.yml  clean_gps_hqtcxo.yml  example.yml  gps-globalstar.yml  gps-hqtcxo.yml  gps-iridium-hqtcxo.yml  gps-iridium_hqtcxo.yml  gps-orbcomm-hqtcxo.yml  gps_efficiency.yml  interference_gps-globalstar_hqtcxo.yml  interference_gps-iridium_hqtcxo.yml  interference_gps-oneweb_hqtcxo.yml  interference_gps_hqtcxo.yml  leo_efficiency.yml  manifold.yml  opportunistic-iridium.yml  sandbox.yml  zzb.yml
data/trajectories/: daytona_500_sdx_1s_loop.csv  figure_eight_sdx_1s_loop.csv  flight_australia_sdx_1s_onego.csv  flight_australia_sdx_1s_onego_230s-SKIP.csv  flight_china_sdx_1s_onego.csv  flight_france_sdx_1s_onego.csv  flight_india_sdx_1s_onego.csv  flight_usa_sdx_01s_onego.csv  rectangle_sdx_01s_loop.csv  road_china_sdx_01s_onego.csv  road_finland_sdx_01_onego.csv  road_france_sdx_01s_onego.csv  road_india_sdx_01s_onego.csv  road_japan_sdx_01s_onego.csv  road_las_vegas_sdx_01s_onego.csv  road_paris_sdx_01s_onego.csv  road_rochester_sdx_01s_onego.csv  road_south_india_sdx_01s_onego.csv  road_usa_sdx_1s_onego.csv  sine_wave_sdx_01s_onego.csv  square_and_loops_sdx_01s_loop.csv
docs/: thesis.tex
docs/template/: README.txt  auhonors.sty  aums_old.sty  (+4 more)
eleventh_hour/: __init__.py  conf.py  data.py  plot.py  trajectories.py
scripts/: clock_test.py  dpe_manifold.py  efficiency.py  efficiency_monte_carlo.py  monte_carlo.py  monte_carlo_dpe.py  monte_carlo_vt.py  op_monte_carlo.py  opportunistic.py  plot_efficiency_monte_carlo.py  plot_monte_carlo.py  sandbox.py  sb.py  simulate_dpe.py  simulate_dpesir.py  simulate_vt.py  test.py  tle_errors.py  zzb.py
(+158 files in other folders)
