[tool.poetry]
name = "eleventh-hour"
version = "0.1.0"
description = ""
authors = ["Tanner Koza <kozatanner@gmail.com>"]
readme = "README.md"
packages = [{include = "eleventh_hour"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
seaborn = "^0.13.1"
cartopy = "^0.22.0"
shapely = "^2.0.2"
planar = {git = "https://github.com/chalk-diagrams/planar.git"}
adjusttext = "^1.0"
navsim = {path = "libs/navsim", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
